--- a/timeline.html
+++ b/timeline.html
@@ -80,6 +80,12 @@
         <p>Growing, learning and inspiring others</p>
       </div>
     </div>
+        <div class="container left">
+      <div class="content">
+        <h2>2021</h2>
+        <p>Got that scholarship, Congratulations🎉🎉🎉</p>
+      </div>
+    </div>
   </div>
     </body>
     </html>
