--- a/timeline.html
+++ b/timeline.html
@@ -81,7 +81,12 @@
       </div>
     </div>
         
-
+<div class="container left">
+      <div class="content">
+        <h2>2021</h2>
+        <p>Got that scholarship, Congratulations🎉🎉🎉</p>
+      </div>
+    </div>
         
   </div>
     </body>
